# final-exam

./: README.md  daleggere.txt  hello.py  home.py  main.py  nazioni.py  pyproject.toml  quiz.py  utils.py  utils_pl.py
app_pages/: an_edition.py  an_eu.py  an_italy.py  an_medals.py  an_nation.py  an_world.py
dataframes/: cities.csv  city.py  countries.py  europe.csv  italy2024.csv  italy2024.py  italy2024.txt  medals.csv  medals.py  utils_pl.py
information/: info_biblio.py  info_data.py  info_map.py
map/: italy.html  province.html  region.html
style/: style.css
