[project]
name = "exam-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "geopandas>=1.0.1",
    "great-tables>=0.14.0",
    "image>=1.5.33",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.0",
]
